GNOME Bugzilla – Bug 724620
core: Fix introspection scanner warnings
Last modified: 2014-02-18 11:35:35 UTC
.
Created attachment 269521 [details] [review] core: Fix introspection scanner warnings
Created attachment 269523 [details] [review] net: Fix introspection scanner warning
Attachment 269521 [details] pushed as 968a7ea - core: Fix introspection scanner warnings Attachment 269523 [details] pushed as d6643ec - net: Fix introspection scanner warning