core: Fix introspection scanner warnings

https://bugzilla.gnome.org/show_bug.cgi?id=724620