src/grl-range-value.c
@@ -66,10 +66,10 @@ grl_range_value_free (GrlRangeValue *range)
   g_slice_free (GrlRangeValue, range);
 }
 
-/*
+/**
  * grl_range_value_hashtable_new:
  *
- * Returns: a #GHashTable
+ * Returns: (transfer full) (element-type gpointer GrlRangeValue): a #GHashTable
  */
 GHashTable *
 grl_range_value_hashtable_new (void)
